# YandexCodeRun_bot

./: .gitignore  LICENSE  README.md  pyproject.toml
core/: __main__.py  config.py  pyproject.toml  requirements.txt
core/analytics/: __init__.py  config.py  plot_builder.py  stats_calculator.py
core/bot/: __init__.py  bot.py  commands.py  config.py  keyboards.py  utils.py
core/bot/texts/: commands.py  info.py
core/parser/: __init__.py  config.py  exceptions.py  scrapers.py
core/shared/: __init__.py
core/tests/: test.py
